--- a/src/app/Shared/Widgets/movie-detial/movie-detial.component.html
+++ b/src/app/Shared/Widgets/movie-detial/movie-detial.component.html
@@ -1,4 +1,7 @@
 <div class="movieDetailContainer">
+    <button mat-dialog-close mat-icon-button color="warn" class="closeButton">
+        <mat-icon>close</mat-icon>
+      </button>
     <div class="title">
         <h1>{{movieDetails.Title}} ({{movieDetails.Year}})</h1>
         <p>⭐ {{movieDetails.imdbRating}}/10</p>
